--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,7 +8,7 @@
 {% block content %}
     {%if user_ip%}
         <h1>
-            Hello World Platzi, your IP is {{ user_ip }}
+            Hello, your IP is {{ user_ip }}
         </h1>
     {%else%}
         <a href="{{url_for('index')}}">Go Home</a>
