--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,6 @@
 <nav>
     <ul>
+        <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="logo">
         <li><a href="{{ url_for('index') }}">Go Home</a></li>
         <li><a href="https://github.com/DiegoRamosLagos" target="_blank">Go to my profile</a></li>
     </ul>
